# Logger2

./: CMakeLists.txt
cmake/: FindOpenNI2.cmake
src/: Logger2.h  OpenNI2Interface.h  main.h
